Fix bug that added horizontal scrolling on mobile view

--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -17,6 +17,7 @@
 .project {
     display: grid;
     grid-template-columns:  50% 50%;
+    margin: var(--spacing-largest) auto;
 
     @include respond(tab-land) {
         grid-template-columns: 1fr;
@@ -65,6 +66,7 @@
     &__thumbnails {
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
     }
 
     &__thumbnail {
